--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
   "author": "Bilal Soylu",
   "license": "ISC",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "clsx": "^2.0.0",
     "marked": "^9.1.6",
-    "clsx": "^2.0.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
     "tailwindcss": "^3.3.6",
-    "vite": "^5.0.8"
+    "vite": "^7.0.0",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
